Overflow-fix

--- a/css/queries.css
+++ b/css/queries.css
@@ -88,6 +88,9 @@
     display: block;
     z-index: 9999;
   }
+  .header {
+    overflow-x: hidden;
+  }
 
   .main-nav {
     background-color: rgba(255, 255, 255, 0.9);
@@ -99,7 +102,6 @@
     width: 50%;
     height: 100vh;
     transform: translateX(100%);
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -108,6 +110,7 @@
     pointer-events: none;
     visibility: hidden;
     z-index: 500;
+    overflow: hidden;
   }
 
   .nav-open.main-nav {
@@ -206,11 +209,12 @@
     height: 75rem;
   }
   .baits {
-    width: 70%;
     margin: 0 auto 3.2rem;
   }
   .modal {
+    max-width: 50rem;
     height: 60rem;
     gap: 3rem;
+    z-index: 10000;
   }
 }
